# openResearch

./: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
agents/profiles/: experimenter.md  librarian.md  paper-editor.md  patent-analyst.md  principal-investigator.md  skeptic.md
apps/graph-studio/: app.js  graph.data.js  index.html  styles.css
apps/research-hub/: server.py
contexts/project/: AGENTS.md
docs/: architecture.md  graph-model.md  influences.md  migration-from-origin-skill.md  research-hub.md  roadmap.md
examples/: host.claude-code.md  host.openclaw.yaml  host.opencode.jsonc  project.openresearch.yaml
graph/compiled/: openresearch.graph.json
research-workspace/db/: reading-list.json  research-profile.yaml
research-workspace/notes/: autorefine-dnl.md
research-workspace/reports/: idea-brief.md  reading-list.html  research-profile.html  research-profile.md  synthesis-report.html  synthesis-report.json
research-workspace/repos/: memory-agent-kit.md
rules/: research.mdc  writing.mdc
schemas/: graph.schema.json  research_packet.schema.json  skill_manifest.schema.json
scripts/: build_graph.py  validate_manifests.py
skills/comparison-research/: SKILL.md  manifest.yaml
skills/evidence-matrix/: SKILL.md  manifest.yaml
skills/experiment-designer/: SKILL.md  manifest.yaml
skills/idea-generator/: SKILL.md  manifest.yaml
skills/novelty-gap-finder/: SKILL.md  manifest.yaml
skills/paper-reader/: SKILL.md  manifest.yaml
skills/paper-scout/: SKILL.md  manifest.yaml
skills/paper-writer/: SKILL.md  (+1 more)
tests/: test_graph_builder.py
(+34 files in other folders)
